<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My App Portfolio</string>
    <string name="text_subtitle">My Nanodegree Apps!</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
    <string name="launch_spotify">This button will launch Spotify Streamer app!</string>
    <string name="launch_scores">This button will launch Scores app!</string>
    <string name="launch_library">This button will launch Library app!</string>
    <string name="launch_build_bigger">This button will launch Build it Bigger app!</string>
    <string name="launch_xyz">This button will launch XYZ Reader app!</string>
    <string name="launch_capstone">This button will launch my capstone app!</string>

</resources>
